# WheelRobotSimulation

./: .clang-format  CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/animation/: CMakeLists.txt
modules/animation/include/: animation.h
modules/animation/src/: animation.cpp
modules/control/: CMakeLists.txt
modules/control/include/: control_base.h  control_center.h
modules/control/include/algorithm/avoid/: avoid_base.h  avoid_tracking.h  deal_with_obs.h  dynamic_system(*).h  dynamic_system.h
modules/control/include/algorithm/track/: mpc(**).h  mpc.h  pid.h  pure_pursuit.h  stanley.h
modules/control/include/algorithm/velocity_plan/: path_classify.h  velocity_planning.h
modules/control/include/function/: avoid_center(*).h  avoid_center.h  path_tracker.h
modules/control/include/track_algorithm/: mpc.h  pid.h  pure_pursuit.h  stanley.h
modules/control/include/velocity_planning/: path_classify.h  velocity_planning.h
modules/control/src/: control_base.cpp  control_center.cpp
modules/control/src/algorithm/avoid/: avoid_base(*).cpp  avoid_base.cpp  avoid_tracking.cpp  deal_with_obs.cpp  dynamic_system.cpp
modules/control/src/algorithm/track/: mpc.cpp  pid.cpp  pure_pursuit..cpp  pure_pursuit.cpp  stanley.cpp
modules/control/src/algorithm/velocity_plan/: path_classify.cpp  velocity_planning.cpp
modules/control/src/function/: avoid_center.cpp  path_tracker.cpp
modules/control/src/track_algorithm/: mpc.cpp  pid.cpp
modules/csvTest/src/: data_play.cpp
modules/csvplot/: CMakeLists.txt
modules/csvplot/include/: data_play.h
modules/csvplot/src/: data_play.cpp
modules/datacenter/: CMakeLists.txt
modules/datacenter/include/: data_center(*).h  data_center.h
modules/datacenter/src/: data_center.cpp
modules/environment/: CMakeLists.txt
modules/environment/include/: environment.h  obstacle.h
modules/environment/src/: environment.cpp  obstacle(------).cpp  obstacle.cpp
modules/gridmap/: CMakeLists.txt
modules/gridmap/include/: grid_map.h
modules/gridmap/src/: grid_map.cpp
modules/logger/: CMakeLists.txt
modules/logger/include/: csv_writer.h  data_logger.h  data_recorder.h
modules/logger/src/: csv_writer.cpp  data_logger.cpp  data_recorder.cpp
modules/planning/: CMakeLists.txt
modules/planning/include/: fem_pse_smooth.h  planning.h
modules/planning/src/: fem_pse_smooth.cpp  planning.cpp
modules/sensor/: CMakeLists.txt
modules/sensor/include/: sensor.h
modules/sensor/src/: sensor.cpp
modules/vehicle/: CMakeLists.txt
modules/vehicle/include/: bycicle.h  robot_configuration.h  simulant_robot.h  unicycle.h
modules/vehicle/src/: bycicle.cpp  simulant_robot.cpp  unicycle.cpp
shell_script/: build.sh  csv_log_plot.sh  sim_start.sh  transfer.sh
src/: main.cpp
utilities/include/basic_algorithm/: dbscan(----).hpp  dbscan.hpp  interpolation(----).hpp  interpolation.h  interpolation.hpp
utilities/include/common_port/: data_port.h
utilities/include/facilities/: Time.h  base_time_struct.h  rate_controller.h  singleton.h  time.h
utilities/include/tools/: math_tools.h
